extract_gt/pemap/gtBlock_PEMap.cpp.log
  File "./pemap/PEMap.cpp", line 1
    /*
    ^
SyntaxError: invalid syntax
